comment detail page (unfinished)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BeeTalk">
         <activity
+            android:name=".pages.CommentDetailPage"
+            android:exported="false" />
+        <activity
             android:name=".pages.ThreadDetailPage"
             android:exported="false" />
         <activity
             android:name=".pages.CreateThreadPage"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".pages.ThreadPage"
             android:exported="true">
