--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,9 +41,20 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.firebase:firebase-firestore:21.4.0'
+
+    // firestore
+    implementation 'com.google.firebase:firebase-firestore:24.4.0'
+
+    // firebase auth
     implementation 'com.google.firebase:firebase-auth:21.1.0'
+
+    // google sign in
     implementation 'com.google.android.gms:play-services-auth:20.3.0'
+    implementation 'androidx.annotation:annotation:1.1.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
