--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BeeTalk">
         <activity
-            android:name=".pages.RegisterPage"
+            android:name=".pages.RegisterUsernamePage"
             android:exported="false" />
-<!--        <activity-->
-<!--            android:name=".pages.LoginPage"-->
-<!--            android:exported="false" />-->
+        <activity
+            android:name=".pages.HomePage"
+            android:exported="false" />
+        <activity
+            android:name=".pages.RegisterPage"
+            android:exported="false" /> <!-- <activity -->
+        <!-- android:name=".pages.LoginPage" -->
+        <!-- android:exported="false" /> -->
         <activity
             android:name=".pages.LoginPage"
             android:exported="true">
