--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,10 @@ android {
     buildFeatures {
         viewBinding = true;
     }
+    packagingOptions{
+        exclude 'META-INF/NOTICE.md'
+        exclude 'META-INF/LICENSE.md'
+    }
 }
 
 dependencies {
@@ -55,6 +59,10 @@ dependencies {
 
     // firebase auth
     implementation 'com.google.firebase:firebase-auth:21.1.0'
+
+    // send email
+    implementation 'com.sun.mail:android-mail:1.6.6'
+    implementation 'com.sun.mail:android-activation:1.6.7'
 
     // google sign in
     implementation 'com.google.android.gms:play-services-auth:20.3.0'
