--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,13 @@ dependencies {
     implementation 'com.sun.mail:android-mail:1.6.6'
     implementation 'com.sun.mail:android-activation:1.6.7'
 
+    // picaso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
     // google sign in
     implementation 'com.google.android.gms:play-services-auth:20.3.0'
     implementation 'androidx.annotation:annotation:1.1.0'
