send OTP to email
done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BeeTalk">
         <activity
+            android:name=".pages.UpdatePasswordPage"
+            android:exported="false" />
+        <activity
+            android:name=".pages.VerifyOTPForgotPasswordPage"
+            android:exported="false" />
+        <activity
             android:name=".pages.EditProfilePage"
             android:exported="false" />
         <activity
