--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,4 +80,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation("org.jetbrains.kotlin:kotlin-reflect:1.7.21")
+
+    // pick video and img from gallery
+    implementation "com.zhihu.android:matisse:0.52"
 }
