--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:name=".pages.SingleVideoPage"
             android:exported="false" />
         <activity
-            android:name=".pages.ChangePasswordActivity"
+            android:name=".pages.ChangePasswordPage"
             android:exported="false" />
         <activity
             android:name=".pages.RecentFollowersPage"
